<resources>
    <string name="app_name">TheDogHouse_Prototype</string>
    <string name="profile_image_desc">Profile picture</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="nav_home">Home</string>
    <string name="nav_uploads">My Uploads</string>
    <string name="nav_settings">Settings</string>

    <string name="nav_register">Register</string>
    <string name="nav_newsletter">Newsletter</string>
    <string name="nav_meds">Meds Donation</string>
    <string name="nav_funds">Funds</string>
    <string name="nav_volunteer">Volunteer</string>

    <string name="label_name">Name:</string>
    <string name="label_sex">Sex:</string>
    <string name="label_age">Age:</string>
    <string name="label_hours">Hours:</string>
    <string name="label_contact_number">Contact Number:</string>
    <string name="label_email">Email:</string>
    <string name="btn_download_documents">Download Documents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>